# CalcKit

./: .gitignore  LICENSE  README.md  demo.cpp  dev.cpp  meson.build  test.cpp  test.py
binding/C/include/: constant.h  derivative.h  duel.h  integral.h  limit.h
docs/: README.MD  constant.MD  derivative.MD  dual.MD  integral.MD  limit.MD
example/: README.MD  derivative.cpp  integral.cpp  limit.cpp
include/: constant.hpp  derivative.hpp  dual.hpp  integral.hpp  limit.hpp
src/: derivative.cpp  dual.cpp  integral.cpp  limit.cpp
